--- a/package.json
+++ b/package.json
@@ -23,7 +23,9 @@
     "@angular/router": "~13.0.0",
     "bootstrap": "^5.2.3",
     "bootstrap-icons": "^1.10.4",
+    "cookieconsent": "^3.1.1",
     "ngx-cookie-service": "^13.2.1",
+    "ngx-cookieconsent": "^2.2.3",
     "rxjs": "~7.4.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.11.4"
