--- a/package.json
+++ b/package.json
@@ -7,41 +7,51 @@
     "build": "ng build",
     "watch": "ng build --watch --configuration development",
     "test": "ng test",
-    "pwa": "http-server ./dist/sudarshannavsoftpage"
+    "pwa": "http-server ./dist/sudarshannavsoftpage",
+    "dev:ssr": "ng run sudarshannavsoftpage:serve-ssr",
+    "serve:ssr": "node dist/sudarshannavsoftpage/server/main.js",
+    "build:ssr": "ng build && ng run sudarshannavsoftpage:server",
+    "prerender": "ng run sudarshannavsoftpage:prerender"
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "~13.0.0",
-    "@angular/cdk": "^13.3.9",
-    "@angular/common": "~13.0.0",
-    "@angular/compiler": "~13.0.0",
-    "@angular/core": "~13.0.0",
-    "@angular/forms": "~13.0.0",
-    "@angular/material": "^13.3.9",
-    "@angular/platform-browser": "~13.0.0",
-    "@angular/platform-browser-dynamic": "~13.0.0",
-    "@angular/router": "~13.0.0",
-    "bootstrap": "^5.2.3",
+    "@angular/animations": "^16.1.0",
+    "@angular/cdk": "^16.1.7",
+    "@angular/common": "^16.1.0",
+    "@angular/compiler": "^16.1.0",
+    "@angular/core": "^16.1.0",
+    "@angular/forms": "^16.1.0",
+    "@angular/material": "^16.1.7",
+    "@angular/platform-browser": "^16.1.0",
+    "@angular/platform-browser-dynamic": "^16.1.0",
+    "@angular/platform-server": "^16.1.0",
+    "@angular/router": "^16.1.0",
+    "@nguniversal/express-engine": "^16.1.2",
+    "bootstrap": "^5.3.1",
     "bootstrap-icons": "^1.10.4",
     "cookieconsent": "^3.1.1",
-    "ngx-cookie-service": "^13.2.1",
-    "ngx-cookieconsent": "^2.2.3",
-    "rxjs": "~7.4.0",
+    "express": "^4.15.2",
+    "localstorage-polyfill": "^1.0.1",
+    "ngx-cookie-service": "^16.0.0",
+    "ngx-cookieconsent": "^4.0.2",
+    "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
-    "zone.js": "~0.11.4"
+    "zone.js": "~0.13.0"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "^13.3.11",
-    "@angular/cli": "~13.0.3",
-    "@angular/compiler-cli": "~13.0.0",
-    "@types/jasmine": "~3.10.0",
-    "@types/node": "^12.11.1",
-    "jasmine-core": "~3.10.0",
-    "karma": "~6.3.0",
-    "karma-chrome-launcher": "~3.1.0",
-    "karma-coverage": "~2.0.3",
-    "karma-jasmine": "~4.0.0",
-    "karma-jasmine-html-reporter": "~1.7.0",
-    "typescript": "~4.4.3"
+    "@angular-devkit/build-angular": "^16.1.7",
+    "@angular/cli": "~16.1.7",
+    "@angular/compiler-cli": "^16.1.0",
+    "@nguniversal/builders": "^16.1.2",
+    "@types/express": "^4.17.0",
+    "@types/jasmine": "~4.3.0",
+    "@types/node": "^12.20.55",
+    "jasmine-core": "~4.6.0",
+    "karma": "~6.4.0",
+    "karma-chrome-launcher": "~3.2.0",
+    "karma-coverage": "~2.2.0",
+    "karma-jasmine": "~5.1.0",
+    "karma-jasmine-html-reporter": "~2.1.0",
+    "typescript": "~5.1.3"
   }
 }
