--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "@angular/platform-server": "^16.1.0",
     "@angular/router": "^16.1.0",
     "@nguniversal/express-engine": "^16.1.2",
+    "animate.css": "^4.1.1",
     "bootstrap": "^5.3.1",
     "bootstrap-icons": "^1.10.4",
     "cookieconsent": "^3.1.1",
@@ -34,6 +35,7 @@
     "localstorage-polyfill": "^1.0.1",
     "ngx-cookie-service": "^16.0.0",
     "ngx-cookieconsent": "^4.0.2",
+    "ngx-owl-carousel-o": "^16.0.0",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.13.0"
